--- a/demo/taro-app/src/app.scss
+++ b/demo/taro-app/src/app.scss
@@ -1,7 +1,6 @@
 // @tailwind base;
 // @tailwind components;
 // @tailwind utilities;
-
-// @import 'tailwindcss/base';
 // @import 'tailwindcss/components';
+@import 'tailwindcss/base';
 @import 'tailwindcss/utilities';
