--- a/demo/remax-app/src/pages/index/index.css
+++ b/demo/remax-app/src/pages/index/index.css
@@ -1,31 +1,5 @@
-.app {
-  text-align: center;
-  padding: 0 24px;
-}
+.test {
+  @apply flex items-center justify-center h-[100px] w-[100px] rounded-[40px] bg-[#123456] bg-opacity-[0.54] text-[#ffffff];
 
-.logo {
-  animation: logo-spin infinite 20s linear;
-  height: 240px;
-  width: 240px;
-  pointer-events: none;
-}
-
-.text {
-  margin-top: 64px;
-}
-
-.header {
-  padding-top: 30%;
-  background-color: #282c34;
-  font-size: 40px;
-  color: white;
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  /* #{!important}; */
 }
