--- a/demo/remax-app/src/app.css
+++ b/demo/remax-app/src/app.css
@@ -1,3 +1,8 @@
-page {
+/* page {
   background: #282c34;
-}
+} */
+
+/* @import 'tailwindcss/base';
+@import 'tailwindcss/utilities'; */
+@tailwind base;
+@tailwind utilities;
