--- a/demo/native-mina/src/pages/index/index.wxml
+++ b/demo/native-mina/src/pages/index/index.wxml
@@ -1,6 +1,7 @@
 <!-- index.wxml -->
 <import src="../../wxml/motto/motto.wxml" />
 <view class="container">
+  <view class="bg-gray-100 dark:bg-zinc-800 h-10 w-10" data-id="bg-[#654123] dark:bg-[#abcdef]" hover-class="bg-red-500 dark:bg-[#487512]"></view>
   <view bindtap="bindViewTap">
     <user avatarUrl="{{userInfo.avatarUrl}}" nickName="{{userInfo.nickName}}"></user>
   </view>
@@ -10,16 +11,20 @@
   <view class="powered h-[200%]">
     <text>{{powered.by}}</text>
   </view>
-  <view class="-mt-2 mb-[-20px] p-[20px]"> p-[20px] -mt-2 mb-[-20px] margin的jit 可不能这么写 -m-[20px] </view>
+  <view class="-mt-2 mb-[-20px] p-[20px]">
+    p-[20px] -mt-2 mb-[-20px] margin的jit 可不能这么写 -m-[20px]
+  </view>
   <view class="space-y-[1.6rem]">
-    <view class="w-[300rpx] text-black text-opacity-[0.19]"> w-[300rpx] text-black text-opacity-[0.19] </view>
+    <view class="w-[300rpx] text-black text-opacity-[0.19]">
+      w-[300rpx] text-black text-opacity-[0.19]
+    </view>
     <view class="max-h-[100px] min-w-[300rpx] text-[20px] leading-[0.9]">
       min-w-[300rpx] max-h-[100px] text-[20px] leading-[0.9]
     </view>
-    <view class="min-h-[100px] max-w-[300rpx] text-[#dddddd]"> max-w-[300rpx] min-h-[100px] text-[#dddddd] </view>
-    <view
-      class="flex h-[100px] w-[100px] items-center justify-center rounded-[40px] bg-[#123456] bg-opacity-[0.54] text-[#ffffff]"
-    >
+    <view class="min-h-[100px] max-w-[300rpx] text-[#dddddd]">
+      max-w-[300rpx] min-h-[100px] text-[#dddddd]
+    </view>
+    <view class="flex h-[100px] w-[100px] items-center justify-center rounded-[40px] bg-[#123456] bg-opacity-[0.54] text-[#ffffff]">
       Hello
     </view>
     <view class="border-[10px] border-solid border-[#098765] border-opacity-[0.44]">
@@ -30,11 +35,11 @@
       <div>2</div>
       <div>3</div>
     </view>
-    <view class="w-32 rounded-md bg-pink-500 py-2 font-semibold text-white ring-4 ring-pink-300"> Default </view>
+    <view class="w-32 rounded-md bg-pink-500 py-2 font-semibold text-white ring-4 ring-pink-300">
+      Default
+    </view>
   </view>
   <view class="test">test</view>
-  <view
-    class="border-0 icon h-10 w-10 mx-auto {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} w-[20px] {{flag=='p-[20px]'?'p-[20px]':'m-[20px]'}}"
-  ></view>
+  <view class="border-0 icon h-10 w-10 mx-auto {{active=='home'?'icon-home-selected':'icon-home'}} {{b}} {{a==='cc'}} w-[20px] {{flag=='p-[20px]'?'p-[20px]':'m-[20px]'}}"></view>
   <button class="bg-sky-700 px-4 py-2 text-white hover:bg-sky-800 sm:px-8 sm:py-3">...</button>
 </view>
