feat: commit MANGLE__ prefix

--- a/demo/native-mina/src/pages/index/index.scss
+++ b/demo/native-mina/src/pages/index/index.scss
@@ -1,5 +1,15 @@
 @import 'share';
 
+.MANGLE__1234567890{
+  @apply text-red-500;
+}
+.MANGLE__qwertyuiopasdfghjklzxcvbnm{
+  @apply text-green-500;
+}
+.MANGLE__QWERTYUIOPASDFGHJKLZXCVBNM{
+  @apply text-yellow-500;
+}
+
 .motto {
   @extend %center-flex;
   @apply mt-[40rpx];
