feat: try use alias in Mina app

--- a/demo/native-mina/src/app.scss
+++ b/demo/native-mina/src/app.scss
@@ -1,7 +1,7 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/utilities";
 
-$padding: 200rpx;
+$padding: 10rpx;
 
 .container {
   height: 100%;
