--- a/demo/uni-app-vue3-vite/src/custom-tab-bar/index.wxml
+++ b/demo/uni-app-vue3-vite/src/custom-tab-bar/index.wxml
@@ -1,7 +1,9 @@
 <!-- miniprogram/custom-tab-bar/index.wxml -->
-<view class="tab-bar">
-  <view class="tab-bar-border"></view>
-  <view wx:for="{{list}}" wx:key="pagePath" class="tab-bar-item" data-path="{{item.pagePath}}" data-index="{{index}}" bindtap="switchTab" data-eventsync="true">
-    <view style="color: {{selected === index ? selectedColor : color}}">{{item.text}}</view>
-  </view>
+<view wx:if="{{visible}}" class="tab-bar">
+  <block>
+    <view class="tab-bar-border"></view>
+    <view wx:for="{{list}}" wx:key="pagePath" class="tab-bar-item" data-path="{{item.pagePath}}" data-index="{{index}}" bindtap="switchTab" data-eventsync="true">
+      <view style="color: {{selected === index ? selectedColor : color}}">{{item.text}}</view>
+    </view>
+  </block>
 </view>
