--- a/demo/native-mina/src/pages/index/index.wxml
+++ b/demo/native-mina/src/pages/index/index.wxml
@@ -2,6 +2,7 @@
 <import src="../../wxml/motto/motto.wxml" />
 <view class="container">
   <user nickName="{{'icebreaker'}}"></user>
+  <button bindtap="onNaDemo">go2Demo</button>
   <button class="btn a{{num}}" bindtap="onTap">{{num}}</button>
   <button class="btn a{{num >='ppp'?num==='qqq'?'xxx':'yyy':'zzz'}}" bindtap="onTap">
     {{num}}
