--- a/demo/native-mina/src/pages/index/index.wxml
+++ b/demo/native-mina/src/pages/index/index.wxml
@@ -1,6 +1,7 @@
 <!-- index.wxml -->
 <import src="../../wxml/motto/motto.wxml" />
 <view class="container">
+  <ice-avatar></ice-avatar>
   <user nickName="{{'icebreaker'}}"></user>
   <button bindtap="onNaDemo">go2Demo</button>
   <button class="btn a{{num}}" bindtap="onTap">{{num}}</button>
