feat: add assets

--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -6,6 +6,9 @@
 
 /* You can override the default Infima variables here. */
 :root {
+  // 微信主色
+  // #07c160
+
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
