--- a/demo/gulp-app/src/pages/index/index.wxml
+++ b/demo/gulp-app/src/pages/index/index.wxml
@@ -1,9 +1,7 @@
 <!-- index.wxml -->
 <view class="h-full text-center">
   <view class="m-[20px]">
-    <view>
-      <image src="../../image/logo.jpg" mode="widthFix" class="w-full h-auto"></image>
-    </view>
+    <view class="bg-[url(https://pic1.zhimg.com/v2-3ee20468f54bbfefcd0027283b21aaa8_720w.jpg)] bg-[length:100%_100%] bg-no-repeat w-screen h-[41.54vw]"></view>
     <view class="space-y-4">
       <view class="text-[14px]">基于Gulp 的微信小程序前端开发工作流</view>
       <view class="text-[14px] text-[#5ba4e5]" bindtap="copyText" data-text="https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin">
