--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -38,60 +38,69 @@
 // }
 
 :root {
+  // https://docusaurus.io/docs/styling-layout#styling-your-site-with-infima
+  --ifm-color-primary: #0ea5e9;
+  --ifm-color-primary-dark: #0d95d2;
+  --ifm-color-primary-darker: #0c8cc6;
+  --ifm-color-primary-darkest: #0a74a3;
+  --ifm-color-primary-light: #1eb0f1;
+  --ifm-color-primary-lighter: #2ab4f2;
+  --ifm-color-primary-lightest: #4dc0f4;
+  // --ifm-color-primary: rgb(14 165 233);
   /*
   See css var + hsl color palette technique:
   https://blog.maximeheckel.com/posts/the-power-of-composition-with-css-variables/
    */
-  --site-primary-hue-saturation: 167 68%;
-  --site-primary-hue-saturation-light: 167 56%; /* do we really need this extra one? */
-  --site-color-favorite-background: #f6fdfd;
-  --site-color-tooltip: #fff;
-  --site-color-tooltip-background: #353738;
-  --site-color-svg-icon-favorite: #e9669e;
-  --site-color-checkbox-checked-bg: hsl(167deg 56% 73% / 25%);
-  --site-color-feedback-background: #fff;
-  --docusaurus-highlighted-code-line-bg: rgb(0 0 0 / 10%);
-  /* Use a darker color to ensure contrast, ideally we don't need important */
-  --ifm-breadcrumb-color-active: var(--ifm-color-primary-darker) !important;
-  --ifm-menu-color-active: var(--ifm-color-primary-darker) !important;
+  // --site-primary-hue-saturation: 167 68%;
+  // --site-primary-hue-saturation-light: 167 56%; /* do we really need this extra one? */
+  // --site-color-favorite-background: #f6fdfd;
+  // --site-color-tooltip: #fff;
+  // --site-color-tooltip-background: #353738;
+  // --site-color-svg-icon-favorite: #e9669e;
+  // --site-color-checkbox-checked-bg: hsl(167deg 56% 73% / 25%);
+  // --site-color-feedback-background: #fff;
+  // --docusaurus-highlighted-code-line-bg: rgb(0 0 0 / 10%);
+  // /* Use a darker color to ensure contrast, ideally we don't need important */
+  // --ifm-breadcrumb-color-active: var(--ifm-color-primary-darker) !important;
+  // --ifm-menu-color-active: var(--ifm-color-primary-darker) !important;
 }
 
-html[data-theme="dark"] {
-  --site-color-feedback-background: #f0f8ff;
-  --site-color-favorite-background: #1d1e1e;
-  --site-color-checkbox-checked-bg: hsl(167deg 56% 73% / 10%);
-  --docusaurus-highlighted-code-line-bg: rgb(66 66 66 / 35%);
-}
+// html[data-theme="dark"] {
+//   --site-color-feedback-background: #f0f8ff;
+//   --site-color-favorite-background: #1d1e1e;
+//   --site-color-checkbox-checked-bg: hsl(167deg 56% 73% / 10%);
+//   --docusaurus-highlighted-code-line-bg: rgb(66 66 66 / 35%);
+// }
 
-/*
- * This selector will be dynamically replaced by the color generator. Don't put
- * other properties here.
- */
-[data-theme="light"] {
-  --ifm-color-primary: hsl(var(--site-primary-hue-saturation) 30%);
-  --ifm-color-primary-dark: hsl(var(--site-primary-hue-saturation) 26%);
-  --ifm-color-primary-darker: hsl(var(--site-primary-hue-saturation) 23%);
-  --ifm-color-primary-darkest: hsl(var(--site-primary-hue-saturation) 17%);
+// /*
+//  * This selector will be dynamically replaced by the color generator. Don't put
+//  * other properties here.
+//  */
+// [data-theme="light"] {
+//   --ifm-color-primary: hsl(var(--site-primary-hue-saturation) 30%);
+//   --ifm-color-primary-dark: hsl(var(--site-primary-hue-saturation) 26%);
+//   --ifm-color-primary-darker: hsl(var(--site-primary-hue-saturation) 23%);
+//   --ifm-color-primary-darkest: hsl(var(--site-primary-hue-saturation) 17%);
 
-  --ifm-color-primary-light: hsl(var(--site-primary-hue-saturation-light) 39%);
-  --ifm-color-primary-lighter: hsl(var(--site-primary-hue-saturation-light) 47%);
-  --ifm-color-primary-lightest: hsl(var(--site-primary-hue-saturation-light) 58%);
-}
+//   --ifm-color-primary-light: hsl(var(--site-primary-hue-saturation-light) 39%);
+//   --ifm-color-primary-lighter: hsl(var(--site-primary-hue-saturation-light) 47%);
+//   --ifm-color-primary-lightest: hsl(var(--site-primary-hue-saturation-light) 58%);
+// }
 
-/*
- * This selector will be dynamically replaced by the color generator. Don't put
- * other properties here.
- */
-[data-theme="dark"] {
-  --ifm-color-primary: hsl(var(--site-primary-hue-saturation) 45%);
-  --ifm-color-primary-dark: hsl(var(--site-primary-hue-saturation) 41%);
-  --ifm-color-primary-darker: hsl(var(--site-primary-hue-saturation) 38%);
-  --ifm-color-primary-darkest: hsl(var(--site-primary-hue-saturation) 32%);
+// /*
+//  * This selector will be dynamically replaced by the color generator. Don't put
+//  * other properties here.
+//  */
+// [data-theme="dark"] {
+//   --ifm-color-primary: hsl(var(--site-primary-hue-saturation) 45%);
+//   --ifm-color-primary-dark: hsl(var(--site-primary-hue-saturation) 41%);
+//   --ifm-color-primary-darker: hsl(var(--site-primary-hue-saturation) 38%);
+//   --ifm-color-primary-darkest: hsl(var(--site-primary-hue-saturation) 32%);
 
-  --ifm-color-primary-light: hsl(var(--site-primary-hue-saturation-light) 54%);
-  --ifm-color-primary-lighter: hsl(var(--site-primary-hue-saturation-light) 62%);
-  --ifm-color-primary-lightest: hsl(var(--site-primary-hue-saturation-light) 73%);
-}
+//   --ifm-color-primary-light: hsl(var(--site-primary-hue-saturation-light) 54%);
+//   --ifm-color-primary-lighter: hsl(var(--site-primary-hue-saturation-light) 62%);
+//   --ifm-color-primary-lightest: hsl(var(--site-primary-hue-saturation-light) 73%);
+// }
 
 [data-theme="light"] .DocSearch {
   /* --docsearch-primary-color: var(--ifm-color-primary); */
