demo: add tailwindcss components

--- a/demo/taro-app/src/app.scss
+++ b/demo/taro-app/src/app.scss
@@ -3,4 +3,5 @@
 // @tailwind utilities;
 // @import 'tailwindcss/components';
 @import 'tailwindcss/base';
+@import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
