--- a/demo/rax-app/src/global.scss
+++ b/demo/rax-app/src/global.scss
@@ -1,6 +1,3 @@
-// @tailwind base;
-// @tailwind components;
-// @tailwind utilities;
-// @import 'tailwindcss/components';
-@import 'tailwindcss/base';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
