chore: e2e demo add wx:if case

--- a/demo/gulp-app/src/pages/index/index.wxml
+++ b/demo/gulp-app/src/pages/index/index.wxml
@@ -19,6 +19,8 @@
         <view class="text-xs">SCSS 实时编译为 WXSS</view>
         <view class="text-xs">px 和 rem 单位转小程序单位rpx</view>
         <view class="text-xs">支持 typescript</view>
+        <view wx:if="{{arr.length>0}}" class="mt-[24px]">mt-[24px]</view>
+        <view class="mt-[33px]" wx:if="{{arr.length>0}}">mt-[33px]</view>
       </view>
       <view class="{{classNames}}"></view>
     </view>
