chore: regist how-to-build-components-by-tailwindcss-react pkg

--- a/demo-linked/taro-app-react/src/app.less
+++ b/demo-linked/taro-app-react/src/app.less
@@ -2,3 +2,5 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+@import url('how-to-build-components-by-tailwindcss-react/dist/style.css');
