--- a/demo/web/index.css
+++ b/demo/web/index.css
@@ -46,19 +46,22 @@
     border-radius: 12rpx
 }
 .border-t-\[3rpx\] {
-    border-top-color: 3rpx
-}
-.bg-\[center_top_1rpx\] {
-    background-color: center top 1rpx
+    border-top-width: 3rpx
 }
 .bg-\[length\:200rpx_100rpx\] {
     background-size: 200rpx 100rpx
+}
+.bg-\[center_top_1rpx\] {
+    background-position: center top 1rpx
 }
 .p-\[0\.32rpx\] {
     padding: 0.32rpx
 }
 .indent-\[50rpx\] {
     text-indent: 50rpx
+}
+.text-\[32rpx\] {
+    font-size: 32rpx
 }
 .text-\[length\:32rpx\] {
     font-size: 32rpx
@@ -73,14 +76,11 @@
     --tw-text-opacity: 1;
     color: rgb(250 250 250 / var(--tw-text-opacity))
 }
-.text-\[32rpx\] {
-    color: 32rpx
-}
 .text-\[color\:32rpx\] {
     color: 32rpx
 }
 .decoration-\[3rpx\] {
-    text-decoration-color: 3rpx
+    text-decoration-thickness: 3rpx
 }
 .underline-offset-\[3rpx\] {
     text-underline-offset: 3rpx
@@ -91,11 +91,13 @@
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
 }
 .outline-\[5rpx\] {
-    outline-color: 5rpx
+    outline-width: 5rpx
 }
 .ring-\[10rpx\] {
-    --tw-ring-color: 10rpx
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(10rpx + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
 }
 .ring-offset-\[3rpx\] {
-    --tw-ring-offset-color: 3rpx
+    --tw-ring-offset-width: 3rpx
 }
