--- a/demo/uni-app-vue3-vite/src/tailwind.scss
+++ b/demo/uni-app-vue3-vite/src/tailwind.scss
@@ -2,8 +2,8 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@layer components {
-  .testCmpnt {
-    @apply bg-black;
-  }
-}
+// @layer components {
+//   .testCmpnt {
+//     @apply bg-black;
+//   }
+// }
