chore: docs update

--- a/demo/uni-app-vue3-vite/src/tailwind.scss
+++ b/demo/uni-app-vue3-vite/src/tailwind.scss
@@ -1,7 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-
+@config "../tailwind.config.js";
 // @layer components {
 //   .testCmpnt {
 //     @apply bg-black;
