--- a/plugins/cli/test/fixtures/native/app.wxss
+++ b/plugins/cli/test/fixtures/native/app.wxss
@@ -1,4 +1,8 @@
 /**app.wxss**/
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
 .container {
   height: 100%;
   display: flex;
