--- a/plugins/cli/test/fixtures/native/app.wxss
+++ b/plugins/cli/test/fixtures/native/app.wxss
@@ -1,14 +1,4 @@
 /**app.wxss**/
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
-
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+@tailwind utilities;
