--- a/apps/native/pages/index/index.wxml
+++ b/apps/native/pages/index/index.wxml
@@ -1,10 +1,10 @@
-<!--index.wxml-->
+<!-- index.wxml -->
 <scroll-view class="scrollarea" scroll-y type="list">
   <view class="container">
     <view class="userinfo">
       <block wx:if="{{canIUseNicknameComp && !hasUserInfo}}">
-        <button class="avatar-wrapper" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
-          <image class="avatar" src="{{userInfo.avatarUrl}}"></image>
+        <button open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
+          <image class="w-[100px] h-[100px]" src="{{userInfo.avatarUrl}}"></image>
         </button>
         <view class="nickname-wrapper">
           <text class="nickname-label">昵称</text>
@@ -13,16 +13,16 @@
         <view class="text-[#432432]">{{ num }}</view>
       </block>
       <block wx:elif="{{!hasUserInfo}}">
-        <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile"> 获取头像昵称 </button>
-        <view wx:else> 请使用2.10.4及以上版本基础库 </view>
+        <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile">获取头像昵称</button>
+        <view wx:else>请使用2.10.4及以上版本基础库</view>
       </block>
       <block wx:else>
         <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-        <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+        <text>{{userInfo.nickName}}</text>
       </block>
     </view>
-    <view class="usermotto">
-      <text class="user-motto">{{motto}}</text>
+    <view class="mt-[40px]">
+      <text class="{{ motto }}">{{motto}}</text>
     </view>
   </view>
 </scroll-view>
