chore: commit native-skyline

--- a/apps/native-skyline/pages/index/index.wxml
+++ b/apps/native-skyline/pages/index/index.wxml
@@ -1,28 +1,13 @@
-<!--index.wxml-->
-<navigation-bar title="Weixin" back="{{false}}" color="black" background="#FFF"></navigation-bar>
-<scroll-view class="scrollarea" scroll-y type="list">
-  <view class="container">
-    <view class="userinfo">
-      <block wx:if="{{canIUseNicknameComp && !hasUserInfo}}">
-        <button class="avatar-wrapper" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
-          <image class="avatar" src="{{userInfo.avatarUrl}}"></image>
-        </button>
-        <view class="nickname-wrapper">
-          <text class="nickname-label">昵称</text>
-          <input type="nickname" class="nickname-input" placeholder="请输入昵称" bind:change="onInputChange" />
-        </view>
-      </block>
-      <block wx:elif="{{!hasUserInfo}}">
-        <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile"> 获取头像昵称 </button>
-        <view wx:else> 请使用2.10.4及以上版本基础库 </view>
-      </block>
-      <block wx:else>
-        <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-        <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-      </block>
+<navigation-bar title="通讯录" back="{{true}}"></navigation-bar>
+<view class="w-screen grow overflow-hidden">
+  <address-book list="{{list}}">
+    <view class="text-black/90">
+      <view class="page__hd">
+        <view class="page__title">Address Book</view>
+        <view class="page__desc">类通讯录列表</view>
+      </view>
+      <view class="page__bd">
+      </view>
     </view>
-    <view class="flex flex-col">
-      <text class="{{motto}} bg-gray-700">{{motto}} 111</text>
-    </view>
-  </view>
-</scroll-view>
+  </address-book>
+</view>
