--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -10,7 +10,16 @@
   --ifm-color-primary-light: #1eb0f1;
   --ifm-color-primary-lighter: #2ab4f2;
   --ifm-color-primary-lightest: #4dc0f4;
+
+  --docusaurus-highlighted-code-line-bg: rgb(0 0 0 / 10%);
 }
+
+html[data-theme='dark'] {
+  --docusaurus-highlighted-code-line-bg: rgb(66 66 66 / 35%);
+}
+
+
+
 
 [data-theme="light"] .DocSearch {
   /* --docsearch-primary-color: var(--ifm-color-primary); */
