--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -12,12 +12,34 @@
   --ifm-color-primary-lightest: #4dc0f4;
 
   --docusaurus-highlighted-code-line-bg: rgb(0 0 0 / 10%);
+
+  --ifm-toc-border-color: theme("colors.slate.900" / 10%);;
 }
 
-html[data-theme='dark'] {
+*,
+:after,
+:before {
+  box-sizing: border-box;
+  border: 0 solid #e5e7eb;
+}
+
+html[data-theme="dark"] {
   --docusaurus-highlighted-code-line-bg: rgb(66 66 66 / 35%);
+
+  --ifm-background-color: rgb(15 23 42);
+  --ifm-navbar-background-color: initial;
+  --ifm-toc-border-color: theme("colors.slate.50" / 6%);
+  /* --ifm-navbar-background-color: rgb(15 23 42); */
+  /* background-color: rgb(15 23 42 / var(--tw-bg-opacity)); */
 }
 
+.navbar {
+  @apply backdrop-blur lg:border-b lg:border-slate-900/10 dark:border-slate-50/[0.06] bg-white/95 dark:bg-transparent;
+}
+
+.footer{
+  @apply lg:border-t lg:border-slate-900/10 dark:border-slate-50/[0.06] dark:bg-transparent;
+}
 
 
 
