--- a/apps/native-skyline/pages/index/index.wxss
+++ b/apps/native-skyline/pages/index/index.wxss
@@ -6,29 +6,14 @@ page {
   background-color: #f7f7f7;
 }
 
-.page__hd {
-  padding: 40px;
-}
-
-.page__bd {
-  padding-bottom: 40px;
-}
-
 .page__title {
-  text-align: left;
-  font-size: 20px;
-  font-weight: 400;
+  @apply text-center text-xl;
 }
 
 .page__desc {
+  @apply text-center text-sm;
   margin-top: 5px;
   color: rgba(0, 0, 0, 0.5);
-  text-align: left;
-  font-size: 14px;
-}
-
-.header {
-  height: 100px;
 }
 
 .cell {
