--- a/demo/gulp-app/src/pages/index/index.wxml
+++ b/demo/gulp-app/src/pages/index/index.wxml
@@ -15,10 +15,10 @@
         功能介绍
       </view>
       <view class="pl-[15px] text-left block">
-        <view class="text-xs">支持 tailwindcss</view>
-        <view class="text-xs">SCSS 实时编译为 WXSS</view>
-        <view class="text-xs">px 和 rem 单位转小程序单位rpx</view>
-        <view class="text-xs">支持 typescript</view>
+        <view class="text-xs">支持 tailwindcss <text class="i-mdi-123"></text> </view>
+        <view class="text-xs">SCSS 实时编译为 WXSS  <text class="i-mdi-ab-testing"></text></view>
+        <view class="text-xs">px 和 rem 单位转小程序单位rpx <text class="i-mdi-abacus"></text></view>
+        <view class="text-xs">支持 typescript <text class="i-mdi-typewriter"></text></view>
         <view wx:if="{{arr.length>0}}" class="mt-[24px]">mt-[24px]</view>
         <view class="mt-[33px]" wx:if="{{arr.length>0}}">mt-[33px]</view>
       </view>
