feat(weapp-vite): commit utils wxml

--- a/apps/vite-native/pages/index/index.wxml
+++ b/apps/vite-native/pages/index/index.wxml
@@ -14,6 +14,17 @@
   <wxs module="wxs" src="./test.wxs"></wxs>
   <view id="tapTest" data-hi="Weixin" bindtap="{{wxs.tapName}}">Click me!</view>
 </scroll-view>
+<template name="odd">
+  <view> odd </view>
+</template>
+<template name="even">
+  <view> even </view>
+</template>
+
+<block wx:for="{{[1, 2, 3, 4, 5]}}">
+  <template is="{{item % 2 == 0 ? 'even' : 'odd'}}"/>
+</block>
+
 <wxs module="m1">
 var msg = "hello world";
 
