chore(deps): upgrade

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -26,28 +26,28 @@
   --ifm-color-primary-light: #1eb0f1;
   --ifm-color-primary-lighter: #2ab4f2;
   --ifm-color-primary-lightest: #4dc0f4;
-
   --docusaurus-highlighted-code-line-bg: rgb(0 0 0 / 10%);
-
   --ifm-toc-border-color: theme('colors.slate.900' / 10%);
 }
 
 *,
-:after,
-:before {
+::after,
+::before {
   box-sizing: border-box;
   border: 0 solid #e5e7eb;
 }
 
 html[data-theme='dark'] {
   --docusaurus-highlighted-code-line-bg: rgb(66 66 66 / 35%);
-
   --ifm-background-color: theme('colors.slate.900');
   --ifm-navbar-background-color: theme('colors.slate.900');
+
   /* --ifm-navbar-background-color: initial; */
 
   --ifm-toc-border-color: theme('colors.slate.50' / 6%);
+
   /* --ifm-navbar-background-color: rgb(15 23 42); */
+
   /* background-color: rgb(15 23 42 / var(--tw-bg-opacity)); */
   --ifm-navbar-link-color: theme('colors.slate.200');
   --docsearch-text-color: theme('colors.slate.200');
@@ -58,8 +58,9 @@ html[data-theme='dark'] {
   @apply lg:border-b lg:border-slate-900/10 dark:border-slate-50/[0.06];
 
   /* bg-white/95; */
+
   /* dark:bg-transparent; */
-  /*  */
+
   /* backdrop-blur */
 }
 
@@ -69,18 +70,23 @@ html[data-theme='dark'] {
 
 [data-theme='light'] .DocSearch {
   /* --docsearch-primary-color: var(--ifm-color-primary); */
+
   /* --docsearch-text-color: var(--ifm-font-color-base); */
   --docsearch-muted-color: var(--ifm-color-secondary-darkest);
-  --docsearch-container-background: rgba(94, 100, 112, 0.7);
+  --docsearch-container-background: rgb(94 100 112 / 70%);
+
   /* Modal */
   --docsearch-modal-background: var(--ifm-color-secondary-lighter);
+
   /* Search box */
   --docsearch-searchbox-background: var(--ifm-color-secondary);
   --docsearch-searchbox-focus-background: var(--ifm-color-white);
+
   /* Hit */
   --docsearch-hit-color: var(--ifm-font-color-base);
   --docsearch-hit-active-color: var(--ifm-color-white);
   --docsearch-hit-background: var(--ifm-color-white);
+
   /* Footer */
   --docsearch-footer-background: var(--ifm-color-white);
 }
@@ -88,16 +94,20 @@ html[data-theme='dark'] {
 [data-theme='dark'] .DocSearch {
   --docsearch-text-color: var(--ifm-font-color-base);
   --docsearch-muted-color: var(--ifm-color-secondary-darkest);
-  --docsearch-container-background: rgba(47, 55, 69, 0.7);
+  --docsearch-container-background: rgb(47 55 69 / 70%);
+
   /* Modal */
   --docsearch-modal-background: var(--ifm-background-color);
+
   /* Search box */
   --docsearch-searchbox-background: var(--ifm-background-color);
   --docsearch-searchbox-focus-background: var(--ifm-color-black);
+
   /* Hit */
   --docsearch-hit-color: var(--ifm-font-color-base);
   --docsearch-hit-active-color: var(--ifm-color-white);
   --docsearch-hit-background: var(--ifm-color-emphasis-100);
+
   /* Footer */
   --docsearch-footer-background: var(--ifm-background-surface-color);
   --docsearch-key-gradient: linear-gradient(
