--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -9,6 +9,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
 /* You can override the default Infima variables here. */
 // :root {
 //   // 微信主色
@@ -46,7 +47,9 @@
   --ifm-color-primary-light: #1eb0f1;
   --ifm-color-primary-lighter: #2ab4f2;
   --ifm-color-primary-lightest: #4dc0f4;
+
   // --ifm-color-primary: rgb(14 165 233);
+
   /*
   See css var + hsl color palette technique:
   https://blog.maximeheckel.com/posts/the-power-of-composition-with-css-variables/
@@ -104,18 +107,23 @@
 
 [data-theme='light'] .DocSearch {
   /* --docsearch-primary-color: var(--ifm-color-primary); */
+
   /* --docsearch-text-color: var(--ifm-font-color-base); */
   --docsearch-muted-color: var(--ifm-color-secondary-darkest);
-  --docsearch-container-background: rgba(94, 100, 112, 0.7);
+  --docsearch-container-background: rgb(94 100 112 / 70%);
+
   /* Modal */
   --docsearch-modal-background: var(--ifm-color-secondary-lighter);
+
   /* Search box */
   --docsearch-searchbox-background: var(--ifm-color-secondary);
   --docsearch-searchbox-focus-background: var(--ifm-color-white);
+
   /* Hit */
   --docsearch-hit-color: var(--ifm-font-color-base);
   --docsearch-hit-active-color: var(--ifm-color-white);
   --docsearch-hit-background: var(--ifm-color-white);
+
   /* Footer */
   --docsearch-footer-background: var(--ifm-color-white);
 }
@@ -123,16 +131,20 @@
 [data-theme='dark'] .DocSearch {
   --docsearch-text-color: var(--ifm-font-color-base);
   --docsearch-muted-color: var(--ifm-color-secondary-darkest);
-  --docsearch-container-background: rgba(47, 55, 69, 0.7);
+  --docsearch-container-background: rgb(47 55 69 / 70%);
+
   /* Modal */
   --docsearch-modal-background: var(--ifm-background-color);
+
   /* Search box */
   --docsearch-searchbox-background: var(--ifm-background-color);
   --docsearch-searchbox-focus-background: var(--ifm-color-black);
+
   /* Hit */
   --docsearch-hit-color: var(--ifm-font-color-base);
   --docsearch-hit-active-color: var(--ifm-color-white);
   --docsearch-hit-background: var(--ifm-color-emphasis-100);
+
   /* Footer */
   --docsearch-footer-background: var(--ifm-background-surface-color);
   --docsearch-key-gradient: linear-gradient(
