--- a/demo/native-mina/src/styles/_mixins.scss
+++ b/demo/native-mina/src/styles/_mixins.scss
@@ -62,10 +62,7 @@
 
 @mixin full($position: absolute) {
   position: $position;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
+  inset: 0;
 }
 
 @mixin full-100() {
